--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
     hooks:
       - id: check-licenses
         name: Check licenses
-        entry: bash -c 'pip-licenses --from=mixed --format=json | jq ".[] | select(.License | contains(\"GPL\"))" && exit 1 || exit 0'
+        entry: bash -c 'uv run pip-licenses --from=mixed --format=json | jq ".[] | select(.License | contains(\"GPL\"))" && echo "GPL license found!" && exit 1 || echo "No GPL licenses found" && exit 0'
         language: system
-        types: [python]
+        files: ^(pyproject\.toml|requirements\.txt|Pipfile)$
+        types_or: [file]
