--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "pandas>=2.2.3",
     "pip-licenses>=5.0.0",
     "pre-commit>=4.0.1",
-    "pyqt6>=6.7.1",
     "pytest>=8.3.3",
 ]
