--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,14 +1,14 @@
 repos:
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.280
+    rev: v0.7.0
     hooks:
       - id: ruff
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.4.1
+    rev: v1.13.0
     hooks:
       - id: mypy
-        args: ["--strict"]
+        args: ["--strict", "--ignore-missing-imports"]
 
   - repo: local
     hooks:
