--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,5 +8,6 @@ dependencies = [
     "pandas>=2.2.3",
     "pip-licenses>=5.0.0",
     "pre-commit>=4.0.1",
+    "pytest-mypy-plugins>=3.1.2",
     "pytest>=8.3.3",
 ]
