--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.115.3",
+    "httpx>=0.27.2",
     "pandas>=2.2.3",
     "pip-licenses>=5.0.0",
     "pre-commit>=4.0.1",
