--- a/mypy.ini
+++ b/mypy.ini
@@ -6,3 +6,9 @@ ignore_missing_imports = True
 
 [mypy-pytest.*]
 ignore_missing_imports = True
+
+[mypy-streamlit]
+ignore_missing_imports = True
+
+[mypy-streamlit.*]
+ignore_missing_imports = True
