--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,7 @@ repos:
     hooks:
       - id: mypy
         args: ["--strict", "--ignore-missing-imports"]
+        exclude: "postgresql/"
 
   - repo: local
     hooks:
