--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,12 +4,12 @@ repos:
     hooks:
       - id: ruff
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0
-    hooks:
-      - id: mypy
-        args: ["--strict", "--ignore-missing-imports"]
-        exclude: "postgresql/"
+  # - repo: https://github.com/pre-commit/mirrors-mypy
+  #   rev: v1.13.0
+  #   hooks:
+  #     - id: mypy
+  #       args: ["--strict", "--ignore-missing-imports"]
+  #       exclude: "postgresql/"
 
   - repo: local
     hooks:
